# brume

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
crates/brume/: Cargo.toml
crates/brume-cli/: Cargo.toml
crates/brume-cli/src/: lib.rs  main.rs
crates/brume-cli/src/commands/: force_resync.rs  list.rs  mod.rs  new.rs  pause.rs  remove.rs  resolve.rs  resume.rs  status.rs
crates/brume-cli/src/prompt/: autocomplete.rs  mod.rs
crates/brume-daemon/: Cargo.toml  diesel.toml
crates/brume-daemon-proto/: Cargo.toml
crates/brume-daemon-proto/src/: config.rs  lib.rs  xdg.rs
crates/brume-daemon/migrations/2025-03-02-095354_init/: down.sql  up.sql
crates/brume-daemon/migrations/2025-06-13-190240_add_last_modified/: down.sql  up.sql
crates/brume-daemon/migrations/2025-07-06-170638_delete_nodes_cascade/: down.sql  up.sql
crates/brume-daemon/src/: daemon.rs  lib.rs  main.rs  protocol.rs  schema.rs  server.rs  synchro_list.rs
crates/brume-daemon/src/db/: mod.rs  vfs.rs
crates/brume-daemon/tests/: conflicts.rs  db.rs  nextcloud.rs  utils.rs
crates/brume-gui/: Cargo.toml
crates/brume-vfs/: Cargo.toml
crates/brume-vfs/src/: lib.rs  sorted_vec.rs  test_utils.rs  update.rs
crates/brume-vfs/src/dir_tree/: dir.rs  file.rs  mod.rs
crates/brume/src/: lib.rs  main.rs  sorted_vec.rs  synchro.rs  test_utils.rs  update.rs
crates/brume/src/concrete/: byte_counter.rs  mod.rs
crates/brume/src/concrete/local/: mod.rs  path.rs
crates/brume/src/concrete/nextcloud/: dav.rs  mod.rs
crates/brume/src/filesystem/: mod.rs
crates/brume/src/vfs/: mod.rs  virtual_path.rs
crates/brume/src/vfs/dir_tree/: dir.rs  file.rs  mod.rs
src/: filesystem.rs  lib.rs  main.rs  sorted_list.rs  sorted_vec.rs  test_utils.rs  update.rs
src/concrete/: mod.rs
src/concrete/local/: mod.rs  path.rs
src/concrete/nextcloud/: dav.rs  mod.rs
src/concrete/remote/: dav.rs  mod.rs
src/filesystem/: byte_counter.rs
src/local/: mod.rs  path.rs
src/remote/: dav.rs  mod.rs
src/vfs/: diff.rs  mod.rs  patch.rs  update.rs  virtual_path.rs
src/vfs/dir_tree/: dir.rs  file.rs  mod.rs  sorted_node_list.rs
