[package]
name = "ncclient"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest_dav = "0.1"
chrono = "0.4"
bytes = { version = "1.6", features = ["std"]}
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1.0"

[dev-dependencies]
ron = "0.8"
