[workspace]
members = [
	"crates/brume-cli",
	"crates/brume-gui",
	"crates/brume",
	"crates/brume-daemon",
	"crates/brume-daemon-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Nicolas Sarlin <nico.sarlin@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nsarlin/brume"
documentation = "https://github.com/nsarlin/brume"
homepage = "https://github.com/nsarlin/brume"
keywords = ["cloud", "network", "filesystem"]
