[package]
name = "brume-cli"
description = "CLI to manage folders synchronized with brume"
edition = "2024"
rust-version = "1.85"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
interprocess = { version = "2.2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tarpc = { version = "0.35", features = ["serde-transport-bincode"] }
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
anyhow = { version = "1.0" }
comfy-table = "7.1.3"

brume-daemon-proto = { version = "0.1.0", path = "../brume-daemon-proto" }
