[package]
name = "brume-daemon-proto"
description = "Common types used to communicates with the Brume daemon"
edition = "2024"
rust-version = "1.85"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
tarpc = { version = "0.35", features = ["serde-transport-bincode"] }
serde = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

brume = { version = "0.1.0", path = "../brume" }
