[package]
name = "brume-daemon"
edition = "2021"
description = "A daemon that synchronizes files in the background using Brume"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
tarpc = { version = "0.35", features = ["serde-transport-bincode"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = { version = "0.3" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2.2", features = ["tokio"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite", "rt_tokio_1"] }
diesel_migrations = { version = "2.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }

brume-daemon-proto = { version = "0.1.0", path = "../brume-daemon-proto" }
brume = { version = "0.1.0", path = "../brume" }

[dev-dependencies]
tempfile = "3.14"
testcontainers = { version = "0.23", features = ["http_wait"] }
rand = "0.9"

[[bin]]
name = "brumed"
path = "src/main.rs"
