[package]
name = "brume-gui"
edition = "2021"
description = "WIP - A GUI to interract with the Brume daemon"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
