[package]
name = "brume-gui"
description = "WIP - A GUI to interract with the Brume daemon"
edition = "2024"
rust-version = "1.85"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
