[package]
name = "brume"
description = "A library for bidirectional file synchronization"
edition = "2024"
rust-version = "1.85"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest_dav = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
chrono = "0.4"
bytes = { version = "1.6", features = ["std"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
urlencoding = "2.0"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.8"

[features]
test-utils = []
